--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
     <string name="nav_header_title">Таксі Лайт Юа</string>
     <string name="nav_header_subtitle">Швидкі поїздки по Києву та області</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Налаштування</string>
 
-    <string name="menu_maps">Головна</string>
-    <string name="menu_home">Home</string>
+    <string name="menu_maps">Мапа</string>
+    <string name="menu_home">Замовити</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_about">Про додаток</string>
@@ -23,5 +23,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="action_exit">Вихід</string>
 
 </resources>
