--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,8 @@
     <string name="login_failed">"Login failed"</string>
     <string name="action_exit">Вихід</string>
     <string name="delete_record">видалити?</string>
+    <string name="make_rout">Створити маршрут</string>
+    <string name="call_admin">Дзвонок оператору</string>
+    <string name="email_friend">Розповісти другові</string>
 
 </resources>
