--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,38 +1,85 @@
 <resources>
-    <string name="version">Версія: 1.46</string>
+    <string name="version">Версия: 1.47</string>
 
-    <string name="app_name">TaxiEasyUa</string>
+    <string name="app_name">Такси Киев</string>
+    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
+    <string name="back4app_app_id">01YGF894m3NJRXT1BlH6qPo9pUfDlG9sqi9K9mIL</string>
+    <string name="back4app_client_key">T5f5GuT1UCmaiJn8Dek3sVmayGuJa2jfelQR6V6f</string>
+
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Таксі Лайт Юа</string>
-    <string name="nav_header_subtitle">Швидкі поїздки по Києву та області</string>
+    <string name="nav_header_title">Такси Киев заказ онлайн Лайт</string>
+    <string name="nav_header_subtitle">Быстрые поездки по Киеву и области</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Налаштування</string>
+    <string name="action_settings">Настройки</string>
 
-    <string name="menu_maps">Мапа</string>
-    <string name="menu_home">Маршрути</string>
+    <string name="menu_maps">Карта</string>
+    <string name="menu_home">Маршруты</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_about">Про додаток</string>
+    <string name="menu_about">О приложении</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Sign in или register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Не valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="action_exit">Вихід</string>
-    <string name="delete_record">видалити?</string>
-    <string name="make_rout">Створити маршрут</string>
-    <string name="call_admin">Дзвонок оператору</string>
-    <string name="email_friend">Розповісти другові</string>
-    <!--    <string name="default_web_client_id">356539267738-5bs72asrar11ud7ckcis68ophlnm3gfj.apps.googleusercontent.com</string>-->
-    <string name="default_web_client_id">356539267738-0v3d1nsci9g7fij8cemnlid7cfalvdo2.apps.googleusercontent.com</string>
-    <string name="my_phone">Мій телефон</string>
-    <string name="open_maps">Замовити по мапе</string>
-    <string name="driver">Робота водієм</string>
-    <string name="send_email">Поділитися</string>
-
+    <string name="action_exit">Выход</string>
+    <string name="delete_record">удалить?</string>
+    <string name="make_rout">Создать маршрут</string>
+    <string name="call_admin">Вызов оператору</string>
+    <string name="email_friend">Рассказать другу</string>
+    <!-- <string name="default_web_client_id">356539267738-5bs72asrar11ud7ckcis68ophlnm3gfj.apps.googleusercontent.com</string>-->
+    <!--  <string name="default_web_client_id">356539267738-0v3d1nsci9g7fij8cemnlid7cfalvdo2.apps.googleusercontent.com</string>-->
+    <string name="my_phone">Мой телефон</string>
+    <string name="open_maps">Заказать по карте</string>
+    <string name="driver">Работа водителем</string>
+    <string name="send_email">Поделиться</string>
+    <string name="gps_ok">У Вас все хорошо</string>
+    <string name="cancel_button">Нет, спасибо</string>
+    <string name="gps_on">Включить</string>
+    <string name="gps_info">Чтобы улучшить работу программы, включите на устройстве геолокацию Google</string>
+    <string name="gps_on_button">включит gps</string>
+    <string name="wellcome">Добро пожаловать. Сформируйте маршрут или выберите любимый.</string>
+    <string name="verify_phone">Проверка телефона</string>
+    <string name="format_phone">Формат ввода телефонного номера: +380936665544</string>
+    <string name="sent_button">Отправить</string>
+    <string name="verify_internet">Проверьте интернет-подключение или позвоните оператору.</string>
+    <string name="save_button">Сохранить</string>
+    <string name="you_this">"Вы сейчас здесь: "</string>
+    <string name="make_rout_message">Сформируйте маршрут</string>
+    <string name="error_message">"Ошибка: "</string>
+    <string name="to_point">"Место назначения: "</string>
+    <string name="cost_of_order">"Стоимость поездки: "</string>
+    <string name="firebase_false_message">грн. Извините, без проверки Google-аккаунта заказ невозможен. Попробуйте снова.</string>
+    <string name="UAH">грн</string>
+    <string name="order">Заказать</string>
+    <string name="thanks_message">"Спасибо за заказ с "</string>
+    <string name="call_of_order">" Ожидайте звонка оператора. Стоимость поездки: "</string>
+    <string name="next_try">" Попробуйте еще или позвоните оператору."</string>
+    <string name="help">Поддержка</string>
+    <string name="show_to_point">Укажите место назначения</string>
+    <string name="change">ИЗМЕНИТЬ</string>
+    <string name="on_city">" по городу."</string>
+    <string name="help_button">Поддержка</string>
+    <string name="try_again">Попробуйте еще</string>
+    <string name="ok_button">Ок</string>
+    <string name="to_message">" к "</string>
+    <string name="rout_from_message">Укажите место отправки</string>
+    <string name="routs_button">Маршруты</string>
+    <string name="old_routs_message">Выбирайте из списка предыдущих поездок</string>
+    <string name="firebase_error">Извините. Вход в приложение заблокирован. Обратитесь к оператору.</string>
+    <string name="choice_button">подтвердить</string>
+    <string name="to_edit">Куда</string>
+    <string name="from_edit">Откуда</string>
+    <string name="sms_code">Код проверки со смс-сообщения</string>
+    <string name="android">Андроид-приложение для скорых и дешевых поездок по Киеву и области.</string>
+    <string name="good_day">Приветствую. Нашел великолепное приложение для поездок на такси. \n \n Советую попробовать по ссылке в официальном магазине Google: \n\n https://play.google.com/store/apps/details?id=com.taxi.easy.ua \n\n Хорошего дня. \n Еще увидимся.</string>
+    <string name="share">Посоветовать другу приложение...</string>
+    <string name="no_email_agent">Почтовый клиент не установлен.</string>
+    <string name="check_position">Ожидайте, происходит определение Вашего местоположения...</string>
 </resources>
