--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="version">Версия: 1.48</string>
+    <string name="version">Версия: 1.49</string>
 
     <string name="app_name">Такси Киев</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -65,6 +65,7 @@
     <string name="show_to_point">Укажите место назначения</string>
     <string name="change">ИЗМЕНИТЬ</string>
     <string name="on_city">" по городу."</string>
+    <string name="on_city_tv">" по городу"</string>
     <string name="help_button">Поддержка</string>
     <string name="try_again">Попробуйте еще</string>
     <string name="ok_button">Ок</string>
@@ -82,4 +83,7 @@
     <string name="share">Посоветовать другу приложение...</string>
     <string name="no_email_agent">Почтовый клиент не установлен.</string>
     <string name="check_position">Ожидайте, происходит определение Вашего местоположения...</string>
+    <string name="my_adresses">Избранные</string>
+    <string name="make_order_message">Совершите хотя бы одну поездку</string>
+    <string name="to_adress_message">Куда едем?</string>
 </resources>
