--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="version">Версія: 1.50</string>
+    <string name="version">Версія: 1.53</string>
 
     <string name="app_name">Таксі Київ</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -55,10 +55,10 @@
     <string name="error_message">"Помілка: "</string>
     <string name="to_point">"Місце призначення: "</string>
     <string name="cost_of_order">"Вартість поїздки: "</string>
-    <string name="firebase_false_message">грн. Вибачте, без перевірки Google-акаунту замовлення не можливе. Спробуйте знову.</string>
+    <string name="firebase_false_message">грн. Вибачте, без перевірки Google-акаунту замовлення не можливе.</string>
     <string name="UAH">грн</string>
     <string name="order">Замовити</string>
-    <string name="thanks_message">"Дякуемо за замовлення зі "</string>
+    <string name="thanks_message">"Дякуемо за замовлення "</string>
     <string name="call_of_order">" Очикуйте дзвонка оператора. Вартість поїздки: "</string>
     <string name="next_try">" Спробуйте ще або зателефонуйте оператору."</string>
     <string name="help">Підтримка</string>
@@ -69,11 +69,11 @@
     <string name="help_button">Підтримка</string>
     <string name="try_again">Спробуйте ще</string>
     <string name="ok_button">Ок</string>
-    <string name="to_message">" до "</string>
+    <string name="to_message">" -> "</string>
     <string name="rout_from_message">Вкажить місце відправлення</string>
     <string name="routs_button">Маршрути</string>
     <string name="old_routs_message">Обирайте зі списку попередніх поїздок</string>
-    <string name="firebase_error">Вибачте. Вхід до додатку заблоковано. Зверніться до оператора.</string>
+    <string name="firebase_error">Вибачте. Вхід заблоковано. Зверніться до оператора.</string>
     <string name="choice_button">підтвердити</string>
     <string name="to_edit">Куди</string>
     <string name="from_edit">Звідки</string>
@@ -86,4 +86,8 @@
     <string name="my_adresses">Обрані</string>
     <string name="make_order_message">Здійсніть хоча б одну поїздку</string>
     <string name="to_adress_message">Куди їдемо?</string>
+    <string name="coastMarkersMessage">"Вартість подорожі до "</string>
+    <string name="please_phone_message">Без інформації про номер телефону замовлення неможливе</string>
+    <string name="check_message">Чекайте, йде підключення.</string>
+    <string name="find_of_map">Спробуйте знайти на карті</string>
 </resources>
