--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">Версия: 1.600</string>
-    <string name="version">Версия: 1.600</string>
+    <string name="version_code">Версия: 1.601</string>
+    <string name="version">Версия: 1.601</string>
 
     <string name="app_name">Такси Киев</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -17,7 +17,7 @@
 
     <string name="menu_maps">Карта</string>
     <string name="menu_home">По адресам</string>
-    <string name="menu_gallery">Мои маршрути</string>
+    <string name="menu_gallery">Мои маршруты</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_about">О приложении</string>
     <string name="title_activity_login">LoginActivity</string>
