--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">Версия: 1.601</string>
-    <string name="version">Версия: 1.601</string>
+    <string name="version_code">1.602</string>
+    <string name="version">Версия: 1.602</string>
 
     <string name="app_name">Такси Киев</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
