--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">1.605</string>
-    <string name="version">Версія: 1.605</string>
+    <string name="version_code">1.608</string>
+    <string name="version">Версія: 1.608</string>
 
     <string name="app_name">Таксі Київ</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -135,4 +135,6 @@
     <string name="no_routs">Немає маршрутів</string>
     <string name="cheng">Змінити</string>
     <string name="delete_routs">видалити обрані маршрути</string>
+    <string name="text_result">Ваше замовлення</string>
+    <string name="btn_again_text">Замовити ще</string>
 </resources>
