--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">1.605</string>
-    <string name="version">Версия: 1.605</string>
+    <string name="version_code">1.608</string>
+    <string name="version">Версия: 1.608</string>
 
     <string name="app_name">Такси Киев</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -137,5 +137,7 @@
     <string name="no_routs">Нет маршрутов</string>
     <string name="cheng">Изменить</string>
     <string name="delete_routs">удалить выбранные маршруты</string>
+    <string name="text_result">Ваш заказ</string>
+    <string name="btn_again_text">Заказать еще</string>
 
 </resources>
