--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">1.701</string>
-    <string name="version">Версія: 1.701</string>
+    <string name="version_code">1.702</string>
+    <string name="version">Версія: 1.702</string>
 
     <string name="app_name">Таксі Київ</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -151,4 +151,5 @@
     <string name="gps_message">Для використання карти увімкніть GPS</string>
     <string name="city">Місто</string>
     <string name="change_message">"Зміна бази адрес."</string>
+    <string name="server_error_connected">Сервер не прийняв запит, наберіть операторів</string>
 </resources>
