--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">1.701</string>
-    <string name="version">Версия: 1.701</string>
+    <string name="version_code">1.702</string>
+    <string name="version">Версия: 1.702</string>
 
     <string name="app_name">Такси Киев</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -151,6 +151,7 @@
     <string name="gps_message">Для использовния карты включите GPS</string>
     <string name="city">Город</string>
     <string name="change_message">"Смена базы адресов. "</string>
+    <string name="server_error_connected">Сервер не принял запрос, наберите операторов</string>
 
 
 </resources>
