--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">1.703</string>
-    <string name="version">Версія: 1.703</string>
+    <string name="version_code">1.704</string>
+    <string name="version">Версія: 1.704</string>
 
     <string name="app_name">Таксі Київ</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -80,7 +80,7 @@
     <string name="from_edit">Звідки</string>
     <string name="sms_code">Код перевіркі зі смс-повідомлення</string>
     <string name="android">Андроїд-додаток для швидких та дешевих поїздок по Києву та області.</string>
-    <string name="good_day">Мої вітання. \n \n Знайшов чудовий додаток для поїздок на таксі. \n \n Раджу спробувати за посиланням в офіційному магазині Google: \n\n https://play.google.com/store/apps/details?id= com.taxi.easy.ua \n\n Гарного дня. \n Ще побачимось.</string>
+    <string name="good_day">Мої вітання. \n \n Знайшов чудовий додаток для поїздок на таксі. \n \n Раджу спробувати за посиланням в офіційному магазині Google: \n\n https://play.google.com/store/apps/details?id=com.taxi.easy.ua \n\n Гарного дня. \n Ще побачимось.</string>
     <string name="share">Порадити другові додаток...</string>
     <string name="no_email_agent">Поштовий клієнт не встановлено.</string>
     <string name="check_position">Зачекайте, відбувається визначення Вашого розташування...</string>
@@ -88,7 +88,7 @@
     <string name="make_order_message">Здійсніть хоча б одну поїздку</string>
     <string name="to_adress_message">Куди їдемо?</string>
     <string name="coastMarkersMessage">"Вартість подорожі по маршруту "</string>
-    <string name="please_phone_message">Без інформації про номер телефону замовлення неможливе</string>
+    <string name="please_phone_message">Ця програма передає номер Вашого мобільного телефону для увімкнення функції замовлення таксі. Без інформації про номер телефону замовлення таксі неможливе. Введіть номер телефону та натисніть кнопку ЗБЕРІГТИ Ви підтверджуєте згоду на передачу номера Вашого телефону диспетчеру для пошуку автомобіля та збереження його для наступних замовлень таксі.</string>
     <string name="check_message">Чекайте, йде підключення.</string>
     <string name="find_of_map">Спробуйте знайти на карті</string>
     <string name="end_point_marker">Місце призначення</string>
@@ -152,4 +152,6 @@
     <string name="city">Місто</string>
     <string name="change_message">"Зміна бази адрес."</string>
     <string name="server_error_connected">Сервер не прийняв запит, наберіть операторів</string>
+    <string name="GDPR">Застосовується Загальний регламент захисту персональних даних (GDPR) ЄС. Виконуючи ці дії користувач погоджується с Правиламі конфедійціності та усвідомлює з якою метою збираються дані, а також те, чи введення інформації є добровільним або обовязковим для користування відповідною послугою.</string>
+    <string name="ok_gdpr">Погодитися</string>
 </resources>
